sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:10: error: not found: value j
          copie(j-ecart,j)
                ^AlgShellSort:10: error: not found: value j
          copie(j-ecart,j)
                        ^AlgShellSort:11: error: not found: value j
          j=j-ecart
          ^AlgShellSort:13: error: not found: value j
        setValeur(j, v)
                  ^