sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var ecart = getNombreValeurs()/2
  while(ecart>0){
    var v = 0
  	for(i<- 1 to getNombreValeurs()-1){
    	v = getValeur(i)
      if(i-ecart > 0){
    		while(i>0 && getValeur(i-ecart)>v){
        	copie(j-ecart,j)
        	j=j-ecart
    		}
  			setValeur(j, v)
  	}
    }
  }
  
}